--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -2,16 +2,23 @@ name: cgroup
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
-  checkout-and-check-formatting:
+  check_cgroup:
     runs-on: ubuntu-latest
-
+    container: nvidia/cuda:10.1-cudnn7-devel-centos7
     steps:
-    - name: check cgroup
-      run: |
-        cd /sys/fs/cgroup 
-        ls
+      - name: Install environment
+        run: |
+          df -h
+          yum -y update
+          yum -y install centos-release-scl-rh epel-release
+          yum -y install java-1.8.0-openjdk-devel devtoolset-7 rh-git218 patch python36-devel python36-pip python36-six
+          echo Downloading Maven
+          curl -L https://archive.apache.org/dist/maven/maven-3/3.6.3/binaries/apache-maven-3.6.3-bin.tar.gz -o $HOME/apache-maven-3.6.3-bin.tar.gz
+          tar xzf $HOME/apache-maven-3.6.3-bin.tar.gz -C /opt/
+          ln -sf /opt/apache-maven-3.6.3/bin/mvn /usr/bin/mvn
+          echo Downloading Bazel
+          curl -L https://github.com/bazelbuild/bazel/releases/download/0.29.1/bazel-0.29.1-installer-linux-x86_64.sh -o bazel.sh --retry 10
+          bash bazel.sh
+          df -h
