--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - name: cgroup
         run: |
+          docker run ubuntu:latest
           cd /sys/fs/cgroup/systemd
           ls
 
