--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: "[SERVICE] Start kafka & zookeeper"
         run: |
-          docker run -d -h=localhost -p 32181:2181 -p 39092:39092 --name kafka-zk postgres:latest &
+          docker run -d -p 32181:2181 -p 39092:39092 --name kafka-zk postgres:latest &
 
       - name: "[SERVICE] Start xxxx"
         run: |
